# ml-vern

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  DEPLOYMENT.md  README.md  RELEASE_NOTES_v0.2.0.md  SECURITY_REPORT_v0.1.8.md  pyproject.toml  test.bat  test.sh
.github/workflows/: quality.yml  test.yml
docs/source/: api.rst  changelog.rst  conf.py  credits.rst  development.rst  faq.rst  getting_started.rst  glossary.rst  index.rst  installation.rst  license.rst  quickstart.rst  security.rst  usage.rst
docs/source/api/: mlvern.core.rst  mlvern.data.rst  mlvern.rst  mlvern.utils.rst  modules.rst
docs/source/tutorials/: index.rst  inspection.rst
docs/source/user_guide/: architecture.rst  index.rst
examples/: basic_version_test.py  mlvern_example.ipynb  test.ipynb  test.py
examples/.mlvern/reports/: data_inspection.json
examples/.mlvern_iris_classification/: registry.json
mlvern/: __init__.py
mlvern/core/: forge.py
mlvern/data/: __init__.py  fingerprint.py  inspect.py  register.py  risk_check.py  statistics.py
mlvern/train/: trainer.py
mlvern/utils/: __init__.py  artifact.py  dataset_utils.py  environment.py  hashing.py  registry.py
mlvern/version/: checkout.py  commit.py  run_manager.py
mlvern/visual/: auto_plot.py  eda.py
tests/: test_inspect.py  test_training.py  test_training.py.bak  test_utilities.py  test_versioning.py
tests/data/: conftest.py
tests/data/edge_cases/: test_all_null_column.py  test_all_nulls.py  (+4 more)
tests/plots/: conftest.py
tests/training/: __init__.py  conftest.py  test_forge_datasets.py  test_forge_evaluation.py  test_forge_initialization.py  test_forge_integration.py  test_forge_models.py  test_forge_runs.py  test_train_model.py
(+39 files in other folders)
