[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlvern"
version = "0.1.0"
description = "Local-first ML pipeline automation with versioning"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "scikit-learn",
    "matplotlib",
    "joblib"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
