[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlvern"
version = "0.1.8"
description = """This version introduces automated data inspection, validation checks, 
and an extensive EDA module that generates structured reports and organized 
visualizations. The goal of this release is to establish a solid, industry-aligned 
foundation for reliable data quality assessment and exploratory analysis before 
model training."""
authors = [{name="Tanmai Raghava"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "scikit-learn",
    "matplotlib",
    "joblib"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "bandit>=1.7"
]
docs = [
    "sphinx>=4.0",
    "sphinx_rtd_theme>=1.0",
    "sphinx-autodoc-typehints>=1.12"
]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.setuptools.packages.find]
where = ["."]
